# OpenglProjectV2

./: README.md
openglcamera/: CMakeLists.txt  build.gradle  proguard-rules.pro
openglcamera/src/androidTest/java/sen/com/openglcamera/: ExampleInstrumentedTest.java
openglcamera/src/main/: AndroidManifest.xml
openglcamera/src/main/assets/Res/: camera.vs  camera_back&while.fs  camera_back&while.vs  camera_filter_rgba.fs  camera_model.fs  camera_normal.fs  ground.fs  ground.vs  model.fs  model.vs  particlesystem.fs  particlesystem.vs  test.fs  test.vs
openglcamera/src/main/assets/resource/camera/: camera.fs  camera.vs  camera_filter_customer.fs  camera_filter_gray.fs  camera_filter_gray_texture2d.fs  camera_filter_skinwhile.fs  camera_filter_skinwhile.vs  camera_filter_skinwhile_v2.fs  camera_normal.fs  fullsrceenfbo.fs  fullsrceenfbo.vs  half_filter_gray.fs  picture_filter_customer.fs  picture_filter_gray.fs  picture_filter_skinwhile_v2.fs  picture_normal.fs  picture_normal.vs
openglcamera/src/main/assets/resource/circle/: circle_normal.fs  circle_normal.vs
openglcamera/src/main/assets/resource/effects/: edgeDetect.fs  effect_.fs  effect_anime_hander.fs  effect_blue_cold.fs  effect_brown.fs  effect_dark_greens.fs  effect_eclosion.fs  effect_scale_eye.fs  fullsrceenfbo.fs  fullsrceenfbo.vs  fullsrceenfbo_gaussion.fs
openglcamera/src/main/assets/resource/model/shader/: rgbcube.fs  rgbcube.vs
openglcamera/src/main/backup/: CameraSence.cpp  camera.cpp
openglcamera/src/main/backup/all/: BaseGLNative.cpp  FrameBuffter.cpp  PictureSGLNative.cpp  PictureSence.cpp  sen_test.cpp  utils.cpp  vertexbuffer.cpp
openglcamera/src/main/backup/allv2/: BaseGLNative.cpp  BaseObj.cpp  BaseSences.cpp  CameraSence.cpp  CameraShape.cpp  FaceDetection.cpp  FullScreenQuad.cpp  MultipleShape.cpp  NativeSwapYuv.cpp  NormalShape.cpp  Picture.cpp  PictureSence.cpp  PictureShape.cpp  TestShader.cpp  camera.cpp  particlesystem.cpp
openglcamera/src/main/backup/v2/: CameraSence.cpp  MyFaceDecetion-BaseGLNative.cpp  PictureSence.cpp  SeetaFace-BaseGLNative.cpp  camera.cpp
openglcamera/src/main/cpp/: BaseGLNative.cpp  BaseObj.cpp  BaseSences.cpp  CameraSGLNative.cpp  CameraSence.cpp  CameraSenceV2.cpp  CameraShape.cpp  EyesTracker.cpp  FrameBuffter.cpp  FullScreenQuad.cpp  MVPMatrix.cpp  Model3D.cpp  MultipleShape.cpp  NativeOpencvOpstion.cpp  NormalShape.cpp  Picture.cpp  PictureSence.cpp  PictureShape.cpp  RGBCube.cpp  RGBCube.h  Shader.cpp  camera.cpp  circle.cpp  ground.cpp  model.cpp  offscreen.cpp  particlesystem.cpp  sen_test.cpp  sence.cpp  shader.cpp  utils.cpp  vertexbuffer.cpp
openglcamera/src/main/java/activity/: CameraMainActivity.java  SplashActivity.java
openglcamera/src/main/java/camera/: CameraOldVersion.java
openglcamera/src/main/java/fragment/: BaseFragment.java  CameraInfoFragment.java  CameraInfoFragmentV2.java  ShapeFragment.java
openglcamera/src/main/java/renderer/: CameraRenderer.java
openglcamera/src/main/java/sen/com/openglcamera/: CameraInfoFragment.java  CameraMainActivity.java  CameraOldVersion.java  CameraRenderer.java
openglcamera/src/main/java/sen/com/openglcamera/activity/: BaseActivity.java  CameraMainActivity.java  CameraV2Activity.java  PictureHandleActivity.java  PictureVideoActivity.java  SplashActivity.java  VideoRecoderActivity.java
openglcamera/src/main/java/sen/com/openglcamera/bean/: CameraSettingInfo.java  CurrentCameInfo.java  EffectInfo.java  FilterInfo.java  ItemCameraSetting.java
openglcamera/src/main/java/sen/com/openglcamera/camera/: BaseCamera.java  CameraNewVersion.java  CameraOldVersion.java
openglcamera/src/main/java/sen/com/openglcamera/commadapter/: HeadFootAdapter.java  LineanItemDecorationV2.java  OnItemOnclickLinstener.java  RecycleCommonAdapter.java  SViewHolder.java  SpaceItemDecoration.java
openglcamera/src/main/java/sen/com/openglcamera/fragment/: BaseDialogFragment.java  BaseFragment.java  CameraInfoFragmentV2.java  FilterFragment.java  PictureEidteDialog.java  PreAndPicSizeFragment.java  ShapeFragment.java
openglcamera/src/main/jniLibs/include/: BaseObj.h  CameraSGLNative.h  CameraShape.h  MultipleShape.h  NormalShape.h  camera.h  circle.h  ground.h  model.h  particlesystem.h  scence.h  sggl.h  shader.h
openglcamera/src/main/jniLibs/include/camera/: BaseGLNative.h  BaseObj.h  BaseSences.h  CameraSGLNative.h  CameraSence.h  CameraShape.h  EyesTracker.h  FaceDetection.h  FrameBuffer.h  FrameBuffter.h  FullScreenQuad.h  MVPMatrix.h  Model3D.h  MultipleShape.h  NativeOpencvOpstion.h  NativeSencesType.h  NativeSwapYUV.h  NormalShape.h  Picture.h  PictureSence.h  PictureShape.h  Shape.h  ShapeType.h  camera.h  particlesystem.h  sen_test.h  sggl.h  shader.h  utils.h  vertexbuffer.h
openglcamera/src/main/res/anim/: dialog_in.xml  dialog_out.xml
openglcamera/src/main/res/drawable/: bg_btn.xml  bg_divider.xml  bg_item_decoration.xml  ic_close.xml  ic_has_choose.xml  ic_right.xml  ic_set.xml  luncher_logo.xml  seekbar_style.xml  seekbar_thumb.xml  seekbar_thumb_normal.xml  selector_radio_circle.xml  selector_radio_text.xml  selector_radiotext_falsewhile.xml  selector_select_bg.xml  selector_tab_bg.xml  selector_text.xml  shape_selected.xml  shape_unselected.xml
openglcamera/src/main/res/layout/: activity_camera_mediacodec.xml  activity_camera_opengl.xml  activity_picture_opengl.xml  fragment_piture_edite.xml  fragment_setting.xml  fragment_settingv1.xml  layout_buttom_opstions.xml  layout_change_effects.xml  layout_change_filter.xml  layout_change_preview.xml  layout_change_shader.xml  layout_eidtext_dialog.xml  layout_item_camera.xml  layout_progress_rgb.xml  layout_recycleview.xml  layout_viewstup_viewpager.xml
openglcamera/src/main/res/values/: colors.xml  strings.xml  styles.xml
openglcamera/src/test/java/sen/com/openglcamera/: ExampleUnitTest.java
(+32 files in other folders)
